envoy-fips/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: gotenberg
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: ingress_mtls
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8443
          filter_chains:
            - transport_socket:
                name: envoy.transport_sockets.tls
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                  require_client_certificate: true
                  common_tls_context:
                    tls_params:
                      tls_minimum_protocol_version: TLSv1_2
                      tls_maximum_protocol_version: TLSv1_3
                      cipher_suites:
                        - ECDHE-ECDSA-AES256-GCM-SHA384
                        - ECDHE-RSA-AES256-GCM-SHA384
                        - ECDHE-ECDSA-AES128-GCM-SHA256
                        - ECDHE-RSA-AES128-GCM-SHA256
                      ecdh_curves:
                        - P-256
                        - P-384
                    tls_certificates:
                      - certificate_chain:
                          filename: /certs/server.crt
                        private_key:
                          filename: /certs/server.key
                    validation_context:
                      trusted_ca:
                        filename: /certs/ca.crt
              filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: gotenberg
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: gotenberg
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
        - name: gotenberg
          type: STRICT_DNS
          connect_timeout: 2s
          load_assignment:
            cluster_name: gotenberg
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: gotenberg
                          port_value: 3000

    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
