envoy-fips/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gotenberg
spec:
  selector:
    app: envoy-gotenberg
  ports:
    - name: https
      port: 8443
      targetPort: 8443
    - name: admin
      port: 9901
      targetPort: 9901
